@@ -1,3 +1,8 @@
+2011-01-02  Ilija Kocho  <ilijak@siva.com.mk>
+
+	* src/ecos/sequential.c, src/ecos/simple.c: Fixed miltiple-line
+	comment warnings.
+
 2010-12-10  Christophe Coutand  <ccoutand@stmi.com>
 
 	* include/lwipopts.h: Fix compilation error when compiling SNMP
